ewarehouse-apex/api/src/objects/Sale_Farmer_Association__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Applied__c</fullName>
        <formula>( Beans_Number_of_90kg_Bags_Sold__c *  Sale__r.Beans_Price_Per_90kg_Bag__c ) +
( Cow_Peas_Number_of_90kg_Bags_Sold__c *  Sale__r.Cow_Peas_Price_Per_90kg_Bag__c ) +
( Dolichos_Number_of_90kg_Bags_Sold__c *  Sale__r.Dolichos_Price_Per_90kg_Bag__c ) +
( Green_Grams_Number_of_90kg_Bags_Sold__c *  Sale__r.Dolichos_Price_Per_90kg_Bag__c ) +
( Maize_Number_of_90kg_Bags_Sold__c *  Sale__r.Maize_Price_Per_90kg_Bag__c ) +
( Pigeon_Peas_Number_of_90kg_Bags_Sold__c *  Sale__r.Pigeon_Peas_Price_Per_90kg_Bag__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Beans_Number_of_90kg_Bags_Sold__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Beans Number of 90kg Bags Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cow_Peas_Number_of_90kg_Bags_Sold__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cow Peas Number of 90kg Bags Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dolichos_Number_of_90kg_Bags_Sold__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dolichos Number of 90kg Bags Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Farmer__c</fullName>
        <label>Farmer</label>
        <referenceTo>Farmer__c</referenceTo>
        <relationshipLabel>Sale Farmer Associations</relationshipLabel>
        <relationshipName>Sale_Farmer_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Fee_Due__c</fullName>
        <label>Fee Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fee_Paid__c</fullName>
        <label>Fee Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Green_Grams_Number_of_90kg_Bags_Sold__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Green Grams Number of 90kg Bags Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maize_Number_of_90kg_Bags_Sold__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Maize Number of 90kg Bags Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pigeon_Peas_Number_of_90kg_Bags_Sold__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Pigeon Peas Number of 90kg Bags Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sale__c</fullName>
        <label>Sale</label>
        <referenceTo>Sale__c</referenceTo>
        <relationshipLabel>Sale Farmer Associations</relationshipLabel>
        <relationshipName>Sale_Farmer_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Sale Farmer Associaton</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SF-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Farmers Association</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>